compiler/fir/raw-fir/psi2fir/testData/rawBuilder/declarations/invalidCode/duplicatedContextParameter.kt
// LANGUAGE: +ContextParameters

context(c: Int)
context(c: String)
fun syncWithSheets() {}

context(c: Int)
context(c: String)
val f: Int get() = c

class Foo {
    context(c: Int)
    context(c: String)
    constructor()
}
